deploy/test-scripts/ansible/terraform/security-group.tf
resource "aws_security_group" "appssmith_sg" {
  name        = "${var.environment}_sg"
  description = "Security group for server"
  vpc_id      = data.aws_vpc.appsmith_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}_sg"
  }
}
